--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
       - name: Notify Discord
         run: |
-          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert!"}' $WEBHOOK
+          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert!"}' ${{ secrets.ACTION }}
