Including artifact path in Discord.

--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -33,4 +33,5 @@ jobs:
           path: movies.ttl
       - name: Notify Discord
         run: |
-          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert!"}' ${{ secrets.WEBHOOK }}
+          artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/{run_id}/artifacts/{artifact_id}
+          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! {artifact} "}' ${{ secrets.WEBHOOK }}
