Including artifact path in Discord.

--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -33,6 +33,6 @@ jobs:
           path: movies.ttl
       - name: Notify Discord
         run: |
-          artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ env.GITHUB_RUN_ID }}/artifacts/{{ steps.create-artifact.outputs.artifact_id }}
+          artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ env.GITHUB_RUN_ID }}/artifacts/${{ steps.create-artifact.outputs.artifact_id }}
           echo $artifact
           curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! {{ artifact }} "}' ${{ secrets.WEBHOOK }}
