--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -31,8 +31,9 @@ jobs:
         with:
           name: Generated Movies RDF Data (ttl)
           path: movies.ttl
+          run: |
+            artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ GITHUB_RUN_ID }}/artifacts/${{ steps.create-artifact.outputs.artifact_id }}
+            echo $artifact
       - name: Notify Discord
         run: |
-          artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ env.GITHUB_RUN_ID }}/artifacts/${{ steps.create-artifact.outputs.artifact_id }}
-          echo $artifact
           curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! {{ artifact }} "}' ${{ secrets.WEBHOOK }}
