--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -32,7 +32,7 @@ jobs:
           name: Generated Movies RDF Data (ttl)
           path: movies.ttl
           run: |
-            artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ GITHUB_RUN_ID }}/artifacts/${{ steps.create-artifact.outputs.artifact_id }}
+            artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ GITHUB.RUN_ID }}/artifacts/${{ steps.create-artifact.outputs.artifact_id }}
             echo $artifact
       - name: Notify Discord
         run: |
