--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -34,6 +34,7 @@ jobs:
           path: movies.ttl
       - name: Notify Discord
         run: |
+          echo "The artifact ID is ${{ steps.archive-data.outputs.artifact_id }}"
           artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ GITHUB.RUN_ID }}/artifacts/${{ steps.archive-data.outputs.artifact_id }}
           echo $artifact
           curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! $artifact "}' ${{ secrets.WEBHOOK }}
