--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Notify Discord
         run: |
           echo "The artifact ID is ${{ steps.archive-data.outputs.upload_url }}"
-          artifact=steps.archive-data.outputs.upload_url
+          artifact=${{ steps.archive-data.outputs.upload_url }}
           echo $artifact
           curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! $artifact "}' ${{ secrets.WEBHOOK }}
