--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Notify Discord
         run: |
           echo "The artifact ID is ${{ steps.archive-data.outputs.upload_url }}"
-          echo "The artifact ID is ${{ steps.archive-data.outputs.asset_id }}"
+          echo "The artifact ID is ${{ steps.archive-data.outputs.id }}"
           artifact=${{ steps.archive-data.outputs.upload_url }}
           echo $artifact
           curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! $artifact "}' ${{ secrets.WEBHOOK }}
