--- a/.github/workflows/triple-generation.yml
+++ b/.github/workflows/triple-generation.yml
@@ -34,5 +34,6 @@ jobs:
           echo "The artifact ID is ${{ steps.archive-data}}"
           echo "The artifact ID is ${{ steps.archive-data.outputs.id }}"
           artifact=${{ steps.archive-data.outputs.upload_url }}
+          echo "MY_VAR=${{ steps.archive-data.outputs.upload_url }}" >> $GITHUB_ENV
           echo $artifact
-          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! ${{ artifact }} "}' ${{ secrets.WEBHOOK }}
+          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! ${{ env.MY_VAR }} "}' ${{ secrets.WEBHOOK }}
