Added ontology in markdown.

--- a/.github/workflows/ontology-generation.yml
+++ b/.github/workflows/ontology-generation.yml
@@ -3,11 +3,7 @@ name: Auto ontology generation
 run-name: |- 
   Auto ontology generation.
 
-on:
-  issues:
-    types: [reopened, opened, closed]
-
-
+on: workflow_dispatch
 
 jobs:
   Generate-Triples:
@@ -24,15 +20,9 @@ jobs:
           git config --global user.name "Generator Bot"
       - name: Generation
         run: |
-          pip install rdflib
-          python script.py
-      - name: Archive data
-        uses: actions/upload-artifact@v3
-        with:
-          name: Generated Movies RDF Data (ttl)
-          path: movies.ttl
-      - name: Notify Discord
+          python ontology/generate.py
+      - name: Version generated ontology
         run: |
-          artifact=https://github.com/FlorianRupp/kim-workshop-23-cicd/suites/${{ env.GITHUB_RUN_ID }}/artifacts/${{ steps.create-artifact.outputs.artifact_id }}
-          echo $artifact
-          curl -H "Content-Type: application/json" -X POST -d '{"content": "Hallo, die RDF-Daten wurden erfolgreich generiert! {{ artifact }} "}' ${{ secrets.WEBHOOK }}
+          git add ontology.ttl
+          git commit -m "Auto generated ontology.ttl based on recent changes of ontology.md"
+          git push
