Added ontology in markdown.

--- a/.github/workflows/ontology-generation.yml
+++ b/.github/workflows/ontology-generation.yml
@@ -20,6 +20,7 @@ jobs:
           git config --global user.name "Generator Bot"
       - name: Generation
         run: |
+          cd ontology
           python ontology/generate.py
       - name: Version generated ontology
         run: |
